# HELM

./: .gitignore  __init__.py  licence.md  pyproject.toml  readme.md  schema.md
config/: env.yml  template.txt
helm/: __init__.py  train.py  tune.py
helm/utils/: cache.py  optuna.py  validate.py
src/: __init__.py  loop.py  test.py  train.py  tune.py
src/utils/: optuna.py  printer.py  report.py  utils.py  validate.py
test/: conftest.py
test/app/: test_full.py
test/app/cache/: cache.json
test/app/results/experiments/expr_1/: registry.csv
test/app/results/experiments/expr_1/20260508_120000/: Cora_MLP.json
test/fixtures/: hparam.json
test/utils/: test_cache.py  test_report.py  test_validate.py
tests/: __init__.py
tests/app/: test_full.py
tests/app/config/: global.json  hparam.json
tests/app/results/experiments/expr_1/: registry.csv
tests/app/results/experiments/expr_1/20260508_120000/: Cora_MLP.json
tests/utils/: __init__.py  test_cache.py  test_report.py  test_validate.py
